修改v-html图片样式

--- a/escape-from-duckov/src/assets/css/global.css
+++ b/escape-from-duckov/src/assets/css/global.css
@@ -376,6 +376,12 @@ a:hover {
   font-weight: 600;
 }
 
+.detail-article img {
+  max-width: 100%;
+  height: auto;
+  margin-bottom: 20px;
+}
+
 
 /* Responsive */
 @media (max-width: 768px) {
