--- a/escape-from-duckov/src/assets/css/global.css
+++ b/escape-from-duckov/src/assets/css/global.css
@@ -379,4 +379,26 @@ a:hover {
   .container{
     padding: 0 10px;
   }
+  .page-header{
+    padding: 20px 0;
+  }
+  .detail-article{
+    padding: 10px;
+  }
+  .detail-article p{
+    font-size: 12px;
+    margin-bottom: 10px;
+  }
+  .detail-article h2{
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+  .detail-article h3{
+    font-size: 16px;
+    margin-bottom: 10px;
+  }
+  .detail-article h4{
+    font-size: 14px;
+    margin-bottom: 10px;
+  }
 }
