--- a/escape-from-duckov/src/assets/css/global.css
+++ b/escape-from-duckov/src/assets/css/global.css
@@ -30,7 +30,7 @@ body {
   color: var(--text-primary);
   line-height: 1.6;
   font-size: 16px;
-  background-image: url('/images/bg.jpg');
+  background-image: url('/images/bg.webp');
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
